<resources>
    <string name="app_name">Računalne priče</string>
    <string name="pitanje">Pitanje</string>
    <string name="provjeri">PROVJERI</string>
    <string name="fotografiraj">Fotografiraj</string>
    <string name="osmosmjerka">Osmosmjerka</string>
    <string name="username">Korisničko ime</string>
    <string name="password">Lozinka</string>
    <string name="etUsernameError">Unesite korisničko ime</string>
    <string name="etPasswordError">Unesite lozinku</string>
    <string name="backToMenu">Povratak na glavni izbornik?</string>
    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <string name="incorrectData">Neispravni podaci</string>
    <string name="imageNotLoaded">Fotografija nije učitana</string>
    <string name="tvAddPuzzleTitle">Puzzle - složi slagalicu od fotografije (kamera)</string>
    <string name="addBackgroundImage">Dodaj sliku za pozadinu</string>
    <string name="addPuzzleInstruction">Dodaj tekst/uputu unutar slagalice</string>
    <string name="save">Spremi</string>
    <string name="addImage">Dodaj fotografiju</string>
    <string name="addMemory">Dodaj memory igru</string>
    <string name="addInstructionMemory">Dodaj uputu ili opis iznad igre</string>
    <string name="addQuestion">Dodaj pitanje</string>
    <string name="addNewQuestion">Dodaj novo pitanje</string>
    <string name="enterAllQuestions">Unesi sva pitanja i odgovore te odaberi boju</string>
    <string name="answer1">Odgovor 1 (točan odgovor)</string>
    <string name="answer2">Odgovor 2</string>
    <string name="answer3">Odgovor 3</string>
    <string name="answer4">Odgovor 4</string>
    <string name="answersTheme">Boja odgovora i radiobuttona</string>
    <string name="black">Crna</string>
    <string name="addNewStory">Dodaj novu stranicu s tekstom (pričom)</string>
    <string name="addStoryTitle">Dodaj naslov priče</string>
    <string name="addStoryDescription">Dodaj glavni tekst</string>
    <string name="left">Lijevo</string>
    <string name="middle">U sredini</string>
    <string name="white">Bijela</string>
    <string name="addConnect">Dodaj povezivanje riječi s definicijom</string>
    <string name="addInstruction">Dodaj uputu za rješavanje (dijalog prije prikaza fragmenta)</string>
    <string name="chooseColorDefinition">Odaberi boju teksta definicije</string>
    <string name="chooseNumberOfPairs">Odaberi broj parova i učitaj fotografiju za svaki (jedan red - jedan par) - obavezno</string>
    <string name="chooseConnectDefinitionNumber">Odaberi broj definicija i pojmova za povezivanje</string>
    <string name="addSort">Dodaj sortiranje pojmova u dvije kategorije</string>
    <string name="firstCategory">Naziv prve kategorije/skupine</string>
    <string name="secondCategory">Naziv druge kategorije/skupine</string>
    <string name="chooseSortLeftNum">Odaberi broj pojmova u prvoj kategoriji i unesi ih</string>
    <string name="chooseSortRightNum">Odaberi broj pojmova u drugoj kategoriji i unesi ih</string>
    <string name="addWordFinder">Dodaj osmosmjerku</string>
    <string name="word1">Riječ 1</string>
    <string name="addWordFinderWordAndDesc">Dodaj riječ za osmosmjerku te opis/definiciju/objašnjenje koje će se prikazati u dijalogu nakon što je riječ pronađena</string>
    <string name="desc">Opis</string>
    <string name="enterAllData">Unesite sve podatke</string>
    <string name="addGuessWord">Dodaj riječ koja će se pogađati</string>
    <string name="addInstructionAboveGame">Dodaj tekst/uputu iznad igre</string>
    <string name="addMessageWordGuess">Dodaj objašnjenje ili definiciju riječi za dijalog koji se prikazuje kada je riječ pogođena</string>
    <string name="addFirstImgWordGuess">Dodaj 1. sliku za pogađanje riječi</string>
    <string name="addSecondImgWordGuess">Dodaj 2. sliku za pogađanje riječi</string>
    <string name="addOddOneOut">Dodaj igru izbacivanje uljeza</string>
    <string name="oddOneOutChooseNumWords">Odaberi broj riječi i u prvo polje upiši uljeza</string>
    <string name="nastavi">Nastavi</string>
    <string name="newTask">Novi zadatak - odaberi kategoriju</string>
    <string name="deleteStory">Obrisati priču?</string>
</resources>
