<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadeScrollbars="false"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            tools:context=".ui.fragments.AddTaskDialogFragment">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvQuestionTitle"
                android:layout_marginTop="10dp"
                android:text="@string/addNewQuestion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvAddQuestionImage"
                android:layout_marginTop="10dp"
                android:text="@string/addBackgroundImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvQuestionTitle">
        </TextView>
        <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/ivAddQuestionImage"
                android:src="@drawable/ic_baseline_add_photo_alternate_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddQuestionImage"
                android:contentDescription="@string/addImage">
        </ImageView>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/questionImageLoadedPath"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/ivAddQuestionImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddQuestionImage">
        </TextView>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addQuestion"
                android:id="@+id/tvAddQuestion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivAddQuestionImage">
        </TextView>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etAddQuestion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddQuestion">
        </EditText>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer1"
                android:id="@+id/tvAddAnswer1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAddQuestion">
        </TextView>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etAddAnswer1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddAnswer1">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer2"
            android:id="@+id/tvAddAnswer2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAddAnswer1">
    </TextView>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etAddAnswer2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddAnswer2">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer3"
            android:id="@+id/tvAddAnswer3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAddAnswer2">
    </TextView>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etAddAnswer3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddAnswer3">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer4"
            android:id="@+id/tvAddAnswer4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAddAnswer3">
    </TextView>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etAddAnswer4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddAnswer4">
        </EditText>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvAnswersTheme"
                android:text="@string/answersTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAddAnswer4">
        </TextView>
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/answersThemeRadiogroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tvAnswersTheme">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black">
        </RadioButton>
            <RadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/white">
            </RadioButton>
        </RadioGroup>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/btnAddQuestion"
                android:text="@string/save"
                android:background="@drawable/rounded_corners"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/answersThemeRadiogroup">
        </Button>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>