<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadeScrollbars="false"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            tools:context=".ui.fragments.AddTaskDialogFragment">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvConnectTitle"
                android:layout_marginTop="10dp"
                android:text="@string/addConnect"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvAddConnectImage"
                android:layout_marginTop="10dp"
                android:text="@string/addBackgroundImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvConnectTitle">
        </TextView>
        <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/ivAddConnectImage"
                android:src="@drawable/ic_baseline_add_photo_alternate_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddConnectImage"
                android:contentDescription="@string/addImage">
        </ImageView>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/connectImageLoadedPath"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/ivAddConnectImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddConnectImage">
        </TextView>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addInstruction"
                android:id="@+id/tvAddConnectInstruction"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivAddConnectImage">
        </TextView>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etAddConnectInstruction"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddConnectInstruction">
        </EditText>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chooseColorDefinition"
                android:id="@+id/tvAddConnectTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAddConnectInstruction">
        </TextView>
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/connectThemeRadiogroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tvAddConnectTheme">
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/black">
            </RadioButton>
            <RadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/white">
            </RadioButton>
        </RadioGroup>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvNumberOfDefinitions"
                android:layout_marginTop="10dp"
                android:text="@string/chooseConnectDefinitionNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/connectThemeRadiogroup">
        </TextView>

        <Spinner android:id="@+id/spinnerConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNumberOfDefinitions"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loadDefinitionsLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerConnect"
                android:orientation="vertical">
        </LinearLayout>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/btnAddConnect"
                android:text="@string/save"
                android:background="@drawable/rounded_corners"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loadDefinitionsLayout">
        </Button>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>