<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadeScrollbars="false"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            tools:context=".ui.fragments.AddTaskDialogFragment">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvStoryTitle"
                android:layout_marginTop="10dp"
                android:text="@string/addNewStory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvAddStoryImage"
                android:layout_marginTop="10dp"
                android:text="@string/addBackgroundImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvStoryTitle">
        </TextView>
        <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/ivAddStoryImage"
                android:src="@drawable/ic_baseline_add_photo_alternate_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddStoryImage"
                android:contentDescription="@string/addImage">
        </ImageView>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/storyImageLoadedPath"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/ivAddStoryImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddStoryImage">
        </TextView>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addStoryTitle"
                android:id="@+id/tvAddStoryTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivAddStoryImage">
        </TextView>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etAddStoryTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddStoryTitle">
        </EditText>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addStoryDescription"
                android:id="@+id/tvAddStoryDesc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAddStoryTitle">
        </TextView>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etAddStoryDesc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddStoryDesc">
        </EditText>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Odaberi položaj teksta"
                android:id="@+id/tvChooseStoryTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAddStoryDesc">
        </TextView>
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/storyThemeRadiogroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tvChooseStoryTheme">
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/left">
            </RadioButton>
            <RadioButton
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/middle">
            </RadioButton>
        </RadioGroup>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/btnAddStory"
                android:text="@string/save"
                android:background="@drawable/rounded_corners"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/storyThemeRadiogroup">
        </Button>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>