<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadeScrollbars="false"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            tools:context=".ui.fragments.AddTaskDialogFragment">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvOddOneOutTitle"
                android:layout_marginTop="10dp"
                android:text="@string/addOddOneOut"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvAddOddOneOutImage"
                android:layout_marginTop="10dp"
                android:text="@string/addBackgroundImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOddOneOutTitle">
        </TextView>
        <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/ivAddOddOneOutImage"
                android:src="@drawable/ic_baseline_add_photo_alternate_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddOddOneOutImage"
                android:contentDescription="@string/addImage">
        </ImageView>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addInstructionAboveGame"
                android:id="@+id/tvAddOddOneOutInstruction"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivAddOddOneOutImage">
        </TextView>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etAddOddOneOutInstruction"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddOddOneOutInstruction">
        </EditText>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oddOneOutChooseNumWords"
                android:id="@+id/tvAddOddOneOutNumWords"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAddOddOneOutInstruction">
        </TextView>
        <Spinner android:id="@+id/spinnerOddOneOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddOddOneOutNumWords"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loadOddOneOutLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerOddOneOut"
                android:orientation="vertical">
        </LinearLayout>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/btnAddOddOneOut"
                android:text="@string/save"
                android:background="@drawable/rounded_corners"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loadOddOneOutLayout">
        </Button>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>